--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -198,7 +198,7 @@ select, .inline-filters button[data-toggle], textarea {
 
 #card__newsletter label,
 #card__tos label { position: relative; text-align: left; line-height: 1.5; font-weight: 400; }
-#card__newsletter input,
+#card__newsletter input { margin-bottom: 0; }
 #card__tos input { margin-bottom: 10px; }
 /* #card__newsletter span.label-required,
 #card__tos span.label-required { position: absolute; top: 0; left: 14px; margin-bottom: 0; } */
