--- a/app/views/layouts/decidim/mailer.html.erb
+++ b/app/views/layouts/decidim/mailer.html.erb
@@ -88,14 +88,7 @@
                     </tr>
                   </table>
 
-                  <table class="row">
-                    <tr>
-                      <th class="expander"></th>
-                      <th class="small-12 first columns cityhall-bar">
-                        <!-- img -->
-                      </th>
-                    </tr>
-                  </table>
+                  <div class="row"><%= render partial: "layouts/decidim/mailer_footer" %></div>
                 </td>
               </tr>
             </table>
