--- a/decidim-core-extended/app/views/decidim/devise/registrations/_form.html.erb
+++ b/decidim-core-extended/app/views/decidim/devise/registrations/_form.html.erb
@@ -1,11 +1,11 @@
-<%= decidim_form_for(form, namespace: "registration", as: resource_name, url: registration_path(resource_name), html: { class: "register-form new_user #{visibility_class}", id: "register-form" }) do |f| %>
+<%= decidim_form_for(form, namespace: "registration", as: resource_name, url: registration_path(resource_name), html: { class: "register-form new_user #{visibility_class}", id: "register-form", autocomplete: 'off' }) do |f| %>
   <%= invisible_captcha %>
   <div class="card">
     <div class="card__content">
       <%= form_required_explanation %>
 
       <div class="field">
-        <%= f.email_field :email, help_text: t("decidim.devise.registrations.new.email_help").html_safe %>
+        <%= f.email_field :email, help_text: t("decidim.devise.registrations.new.email_help").html_safe, autocomplete: 'off' %>
       </div>
 
       <div class="field">
@@ -18,13 +18,13 @@
 
       <div class="user-person">
         <div class="field">
-          <%= f.text_field :name, help_text: t("decidim.devise.registrations.new.username_help").html_safe %>
+          <%= f.text_field :name, help_text: t("decidim.devise.registrations.new.username_help").html_safe, autocomplete: 'off' %>
         </div>
       </div>
 
       <div class="user-nickname">
         <div class="field">
-          <%= f.text_field :nickname, help_text: t("decidim.devise.registrations.new.nickname_help", organization: current_organization.name), prefix: { value: "@", small: 1, large: 1 } %>
+          <%= f.text_field :nickname, help_text: t("decidim.devise.registrations.new.nickname_help", organization: current_organization.name), prefix: { value: "@", small: 1, large: 1 }, autocomplete: 'off' %>
         </div>
       </div>
 
@@ -33,7 +33,7 @@
       </div>
 
       <div class="field">
-        <%= f.password_field :password_confirmation %>
+        <%= f.password_field :password_confirmation, autocomplete: 'off' %>
       </div>
     </div>
   </div>
