--- a/decidim-admin_extended/app/views/decidim/admin/components/index.html.erb
+++ b/decidim-admin_extended/app/views/decidim/admin/components/index.html.erb
@@ -7,7 +7,7 @@
         <div class="dropdown-pane" id="add-component-dropdown" data-dropdown data-auto-focus="true" data-close-on-click="true">
           <ul class="vertical menu add-components">
             <% @manifests.each do |manifest| %>
-              <% next if [:budgets, :accountability].include?(manifest.name) %>
+              <% next if [:budgets, :accountability, :sortitions].include?(manifest.name) %>
               <li><%= link_to t("#{manifest.name}.name", scope: "decidim.components"), new_component_path(type: manifest.name), class: manifest.name %></li>
             <% end %>
           </ul>
