disable submit button on questionire

--- a/decidim-surveys_extended/app/views/decidim/forms/questionnaires/show.html.erb
+++ b/decidim-surveys_extended/app/views/decidim/forms/questionnaires/show.html.erb
@@ -146,3 +146,9 @@
 </div>
 
 <%= javascript_include_tag "decidim/forms/forms" %>
+<%= javascript_tag do %>
+  $('form.answer-questionnaire').on('submit', function() {
+    $('button:submit').attr('disabled', true);
+    $('button:submit').html('<%= t("decidim.forms.questionnaires.show.saving") %>');
+  });
+<% end %>
