trello card: 241 - news

--- a/decidim-admin_extended/app/assets/stylesheets/decidim/admin_extended/admin_styles.css
+++ b/decidim-admin_extended/app/assets/stylesheets/decidim/admin_extended/admin_styles.css
@@ -1,2 +1,16 @@
 .promoted-scope { color: var(--secondary) }
 .promoted-scope.border { margin-bottom: 15px; }
+
+
+.icon.red {
+  color: #e66a5d;
+}
+.icon.green {
+  color: green;
+}
+
+.sliced-in-two {
+  vertical-align: top;
+  width: 49%;
+  display: inline-block;
+}
