--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require decidim
  *= require decidim/core/extended/application.css
+ *= require decidim/admin_extended/information_card.css
  *= require decidim/assemblies/extended/application.css
  *= require decidim/processes/extended/application.css
  *= require decidim/surveys_extended/application.css
@@ -168,6 +169,9 @@ h4 small, .h4 small, h5 small, .h5 small, h6 small, .h6 small { color: #5A5358; 
 .card.card--mini:hover,
 .card.card--mini:hover .card__link { text-decoration: none; color: #4f4f4f; }
 
+.card-grid.centered {
+  justify-content: space-between;
+}
 
 /******* forms ******/
 
