--- a/decidim-admin_extended/app/assets/stylesheets/decidim/admin_extended/information_card.scss
+++ b/decidim-admin_extended/app/assets/stylesheets/decidim/admin_extended/information_card.scss
@@ -21,11 +21,13 @@
   }
 
   .card {
-    border: 2px solid #000;
+    border: 1px solid #e8e8e8;;
     margin-bottom: 0;
     display: flex;
     flex-direction: column;
     height: 100%;
+    background-color: #fff8e5;
+    border-radius: 15px;
   }
 
   a.card {
