--- a/decidim-processes-extended/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
+++ b/decidim-processes-extended/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
@@ -41,9 +41,9 @@
       <% if related_processes.any? %>
         <div class="section row collapse related_processes">
           <h4 class="section-heading"><%= t "related_processes", scope: "decidim.participatory_processes.show" %></h4>
-          <div class="collapsible-list row small-up-1 medium-up-2 card-grid">
+          <div class="row small-up-1 medium-up-2 card-grid">
             <% related_processes.each do |related_process| %>
-              <%= card_for(related_process) %>
+              <%= render 'decidim/participatory_processes/participatory_processes/new_mini', participatory_process: related_process %>
             <% end %>
           </div>
         </div>
@@ -54,7 +54,7 @@
           <h4 class="section-heading"><%= t("participatory_process.show.related_assemblies", scope: "decidim") %></h4>
           <div class="row small-up-1 medium-up-2 card-grid">
             <% linked_assemblies.each do |linked_assembly| %>
-              <%= card_for(linked_assembly) %>
+              <%= render 'decidim/assemblies/assemblies/new_mini', assembly: linked_assembly %>
             <% end %>
           </div>
         </div>
