--- a/app/packs/stylesheets/decidim/decidim_application.scss
+++ b/app/packs/stylesheets/decidim/decidim_application.scss
@@ -1,28 +1,15 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require decidim
- *= require decidim/core/extended/application.css
- *= require decidim/admin_extended/information_card.css
- *= require decidim/assemblies/extended/application.css
- *= require decidim/processes/extended/application.css
- *= require decidim/surveys_extended/application.css
- *= require_tree .
- *= require_self
- */
+// This is a file that can be overridden by the application in order to override styles
+// Notice that this file is included at the very end of the stylesheets packs to have
+// more priority
+//
+// To override the Tailwind CSS configuration you can do so by following the instructions
+// available at https://docs.decidim.org/en/develop/customize/styles.html#_tailwind_css
+//
+// By default this is empty.
 
-/*** colors ***/
-/* pale-yellow: #fff8e5; */
+@import "utils/fontface.scss";
 
+@import "../rwd";
 
 .comment__votes span {
   font-size: 1.3em;
@@ -84,7 +71,7 @@ a:hover, a:focus,
 }
 
 .logo-cityhall img {
-    height: 77px !important;
+  height: 77px !important;
 }
 
 
@@ -281,12 +268,12 @@ input:checked ~ .switch-paddle { background: var(--secondary); }
 }
 .opinion-toggle--meh:hover, .opinion-toggle--meh:focus, .opinion-toggle--meh.is-active { background-color: var(--primary); }
 .button.tiny.opinion-toggle--ok {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 .button.tiny.opinion-toggle--ko {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 .button.tiny.opinion-toggle--meh { border-radius: 0; }
 .button--muted { color: #fff; }
