--- a/app/packs/stylesheets/decidim/utils/_fontface.scss
+++ b/app/packs/stylesheets/decidim/utils/_fontface.scss
@@ -2,19 +2,19 @@
   font-family: 'Source Sans Pro';
   font-style: normal;
   font-weight: 400;
-  src: asset_url('SourceSansPro-Regular.ttf');
+  src: url('fonts/SourceSansPro-Regular.ttf');
 }
 
 @font-face{
   font-family: 'Source Sans Pro';
   font-style: normal;
   font-weight: 600;
-  src: asset_url('SourceSansPro-SemiBold.ttf');
+  src: url('fonts/SourceSansPro-SemiBold.ttf');
 }
 
 @font-face{
   font-family: 'Source Sans Pro';
   font-style: normal;
   font-weight: 900;
-  src: asset_url('SourceSansPro-Bold.ttf');
+  src: url('fonts/SourceSansPro-Bold.ttf');
 }
