update admin-extended module
register packs in admin_extended

--- a/decidim-admin_extended/app/views/layouts/decidim/admin/_header_extra.html.erb
+++ b/decidim-admin_extended/app/views/layouts/decidim/admin/_header_extra.html.erb
@@ -1,2 +1,5 @@
-<%= stylesheet_link_tag  "decidim/admin_extended/application.css", media: "all" %>
-<%= javascript_include_tag "decidim/admin_extended/application" %>
+<%#= stylesheet_link_tag  "decidim/admin_extended/application.css", media: "all" %>
+<%= stylesheet_pack_tag  "decidim_admin_extended_admin", media: "all" %>
+
+<%#= javascript_include_tag "decidim/admin_extended/application" %>
+<%#= javascript_pack_tag "decidim/admin_extended/application" %>
