--- a/decidim-admin_extended/app/views/layouts/decidim/admin/_header.html.erb
+++ b/decidim-admin_extended/app/views/layouts/decidim/admin/_header.html.erb
@@ -1,8 +1,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <%= csrf_meta_tags %>
-<%= stylesheet_link_tag    "decidim/admin/application", media: "all" %>
-<%= javascript_include_tag "decidim/confirm" %>
-<%= javascript_include_tag "decidim/admin/application" %>
+<%= stylesheet_pack_tag "decidim_admin", media: "all" %>
+<%# TODO: uzupelnic %>
+<%#= javascript_pack_tag "decidim/confirm" %>
+<%= javascript_pack_tag "decidim_admin" %>
 <%= organization_colors %>
 <%= snippets.display(:head) %>
 <%= render "layouts/decidim/admin/header_extra" %>
