--- a/decidim-core-extended/app/views/layouts/decidim/core/extended/application.html.erb
+++ b/decidim-core-extended/app/views/layouts/decidim/core/extended/application.html.erb
@@ -5,8 +5,8 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= stylesheet_link_tag    "decidim/core/extended/application", media: "all" %>
-  <%= javascript_include_tag "decidim/core/extended/application" %>
+  <%= stylesheet_pack_tag "decidim/core/extended/application", media: "all" %>
+  <%= javascript_pack_tag "decidim/core/extended/application" %>
 </head>
 <body>
 
