--- a/decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb
+++ b/decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb
@@ -248,4 +248,5 @@
 </div>
 
 <%= javascript_include_tag "decidim/assemblies/admin/assemblies" %>
-<%= javascript_include_tag "decidim/assemblies/admin/custom" %>
+<%#= javascript_include_tag "decidim/assemblies/admin/custom" %>
+<%= javascript_pack_tag "assemblies_admin_custom" %>
