--- a/decidim-processes-extended/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
+++ b/decidim-processes-extended/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
@@ -1,5 +1,7 @@
 <% add_decidim_meta_tags({
-                           image_url: current_participatory_space.hero_image.url,
+                           # TODO: zaktualizowac po update
+                           # image_url: current_participatory_space.hero_image.url,
+                           image_url: nil,
                            description: translated_attribute(current_participatory_space.short_description),
                            url: participatory_process_url(current_participatory_space),
                            twitter_handler: current_organization.twitter_handler
