--- a/decidim-processes-extended/app/views/layouts/decidim/_process_header.html.erb
+++ b/decidim-processes-extended/app/views/layouts/decidim/_process_header.html.erb
@@ -1,7 +1,8 @@
 <div class="process-header">
   <div class="process-header__inner">
+    <%# # TODO: zaktualizowac po update %>
     <div class="row column process-header__main"
-        style="background-image:url(<%= current_participatory_space.banner_image.url %>);">
+        style="background-image:url(<%#= current_participatory_space.banner_image.url %>);">
     </div>
     <div class="process-header__container row collapse column">
       <div class="columns mediumlarge-8 process-header__info">
