--- a/decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb
+++ b/decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb
@@ -1,5 +1,3 @@
-<%= javascript_include_tag "decidim/slug_form" %>
-
 <div class="card">
   <div class="card-divider">
     <h2 class="card-title"><%= t(".title") %></h2>
@@ -50,6 +48,11 @@
 
     <div class="row column">
       <%= form.translated :editor, :internal_organisation %>
+    </div>
+
+    <div class="row column">
+      <%= form.translated :editor, :announcement %>
+      <p class="help-text"><%== t(".announcement_help") %></p>
     </div>
   </div>
 
@@ -247,6 +250,7 @@
   </div>
 </div>
 
-<%= javascript_include_tag "decidim/assemblies/admin/assemblies" %>
-<%#= javascript_include_tag "decidim/assemblies/admin/custom" %>
 <%= javascript_pack_tag "assemblies_admin_custom" %>
+<%# TODO: dodac brakujacy js %>
+<%#= javascript_include_tag "decidim/assemblies/admin/custom" %>
+
