--- a/decidim-admin_extended/app/views/layouts/decidim/admin/_header.html.erb
+++ b/decidim-admin_extended/app/views/layouts/decidim/admin/_header.html.erb
@@ -1,9 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <%= csrf_meta_tags %>
 <%= stylesheet_pack_tag "decidim_admin", media: "all" %>
-<%# TODO: uzupelnic %>
-<%#= javascript_pack_tag "decidim/confirm" %>
-<%= javascript_pack_tag "decidim_admin" %>
+<%= javascript_pack_tag "decidim_admin", defer: false %>
 <%= organization_colors %>
 <%= snippets.display(:head) %>
 <%= render "layouts/decidim/admin/header_extra" %>
