--- a/decidim-admin_extended/app/views/layouts/decidim/admin/_header_extra.html.erb
+++ b/decidim-admin_extended/app/views/layouts/decidim/admin/_header_extra.html.erb
@@ -1,3 +1,4 @@
+<% #TODO: do uzupelnienia assety %>
 <%#= stylesheet_link_tag  "decidim/admin_extended/application.css", media: "all" %>
 <%= stylesheet_pack_tag  "decidim_admin_extended_admin", media: "all" %>
 
