--- a/decidim-core-extended/app/views/decidim/devise/registrations/new.html.erb
+++ b/decidim-core-extended/app/views/decidim/devise/registrations/new.html.erb
@@ -33,5 +33,6 @@
   </div>
 </div>
 </div>
-<%= javascript_include_tag "decidim/core/extended/registration_types_handler" %>
+
+<%= javascript_pack_tag "registration_types_handler" %>
 <%= render "decidim/devise/shared/newsletter_modal" %>
