--- a/decidim-surveys_extended/app/views/decidim/forms/admin/questionnaires/_form.html.erb
+++ b/decidim-surveys_extended/app/views/decidim/forms/admin/questionnaires/_form.html.erb
@@ -154,6 +154,7 @@
   <% end %>
 </div>
 
+<% #TODO: do uzupelnienia assety %>
 <% if questionnaire.questions_editable? %>
   <%= javascript_include_tag "decidim/surveys_extended/admin/forms_new" %>
 <% end %>
