--- a/decidim-processes-extended/app/views/decidim/participatory_processes/admin/participatory_processes/_form.html.erb
+++ b/decidim-processes-extended/app/views/decidim/participatory_processes/admin/participatory_processes/_form.html.erb
@@ -1,5 +1,3 @@
-<%= javascript_include_tag "decidim/slug_form" %>
-
 <div class="card">
   <div class="card-divider">
     <h2 class="card-title"><%= t(".title") %></h2>
@@ -200,5 +198,4 @@
   </div>
 </div>
 
-<%#= javascript_include_tag "decidim/participatory-processes-extended/admin/participatory_processes" %>
-<%= javascript_include_tag "decidim/participatory_processes/admin/participatory_processes" %>
+<%= javascript_pack_tag "decidim_participatory_processes_admin" %>
