--- a/decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb
+++ b/decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb
@@ -250,5 +250,7 @@
   </div>
 </div>
 
-<%= javascript_pack_tag "decidim_assemblies_admin" %>
 <%= javascript_pack_tag "assemblies_admin_custom" %>
+<%# TODO: dodac brakujacy js %>
+<%#= javascript_include_tag "decidim/assemblies/admin/custom" %>
+
