--- a/decidim-assemblies-extended/app/views/decidim/assemblies/admin/assembly_members/_form.html.erb
+++ b/decidim-assemblies-extended/app/views/decidim/assemblies/admin/assembly_members/_form.html.erb
@@ -67,4 +67,4 @@
   </div>
 </div>
 
-<%= javascript_pack_tag "decidim_assemblies_admin" %>
+<%= javascript_include_tag "decidim/assemblies/admin/assembly_members" %>
