--- a/decidim-processes-extended/app/views/decidim/participatory_processes/admin/participatory_process_steps/_form.html.erb
+++ b/decidim-processes-extended/app/views/decidim/participatory_processes/admin/participatory_process_steps/_form.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "decidim/slug_form" %>
+<%#= javascript_include_tag "decidim/processes/extended/dates" %>
 <%= javascript_pack_tag "dates" %>
 
 <div class="card">
