--- a/decidim-module-meetings_extended/app/views/decidim/meetings/admin/agenda/_form.html.erb
+++ b/decidim-module-meetings_extended/app/views/decidim/meetings/admin/agenda/_form.html.erb
@@ -65,4 +65,4 @@
   </div>
 </div>
 
-<%= javascript_pack_tag "decidim_meetings_admin" %>
+<%= javascript_include_tag "decidim/meetings/admin/agendas" %>
