--- a/decidim-proposals_extended/app/views/decidim/proposals/collaborative_drafts/index.html.erb
+++ b/decidim-proposals_extended/app/views/decidim/proposals/collaborative_drafts/index.html.erb
@@ -28,3 +28,5 @@
     <%= render partial: "collaborative_drafts" %>
   </div>
 </div>
+<%= javascript_include_tag "decidim/filters" %>
+<%= javascript_include_tag "decidim/results_listing" %>
