--- a/decidim-module-meetings_extended/app/views/decidim/meetings/meetings/show.html.erb
+++ b/decidim-module-meetings_extended/app/views/decidim/meetings/meetings/show.html.erb
@@ -17,7 +17,7 @@ edit_link(
 
 <div class="row column view-header">
   <div class="m-bottom">
-    <%= link_to meetings_path(filter_link_params), class: "small hollow" do %>
+    <%= link_to meetings_path, class: "small hollow js-back-to-list" do %>
       <%= icon "chevron-left", class: "icon--small", role: "img", "aria-hidden": true %>
       <%= t(".back") %>
     <% end %>
@@ -164,6 +164,7 @@ edit_link(
         <%= decidim_sanitize translated_attribute meeting.closing_report %>
       </div>
     <% end %>
+
     <%= linked_resources_for meeting, :proposals, "proposals_from_meeting" %>
     <%= linked_resources_for meeting, :results, "meetings_through_proposals" %>
   </div>
